# llm-eval-kit

./: .env.example  .gitignore  AGENTS.md  Dockerfile  EXPERIMENTS.md  LICENSE  README.md  ROADMAP.md  cli.py  eval_logger.py  generate_haystack.py  generate_realistic_haystack.py  generate_synthetic_codebase.py  pyproject.toml  requirements.txt  swarm_profiler.py  vuln_scanner_chunker.py
.github/workflows/: release.yml
examples/: alert-triage.yaml  code-refactor.yaml  logql-summarization.yaml  mob-of-experts.yaml  multi-agent-blog.yaml  promql-generation.yaml  single-agent-blog.yaml  summarization.yaml
examples/homelab/: mas-triage-swarm.yaml  standup-eval.yaml
examples/inputs/: haystack_10k.txt  haystack_1k.txt  mock_alert_payload.json  mock_logql_result.json  mock_loki_logs.json  mock_prom_schema.md  mock_promql_result.json  multi-agent-patterns.md  sample_script.sh
grafana/: dashboard.json  eval-metrics-dashboard.json
