[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-kit"
version = "0.1.0"
description = "A lightweight, YAML-driven CLI for evaluating LLM agents against criteria"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "litellm[proxy]",
    "deepeval",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "arize-phoenix",
    "pyyaml",
    "pydantic",
    "pytest-asyncio",
    "aiohttp",
    "prometheus-client",
]

[project.scripts]
llm-eval = "cli:app"

[tool.setuptools]
py-modules = ["cli", "eval_logger"]
