[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-kit"
version = "0.1.0"
description = "A lightweight, YAML-driven CLI for evaluating LLM agents against criteria"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # deepeval and litellm ship breaking API changes frequently; pin tightly.
    "deepeval>=2.0.0,<3.0.0",
    "litellm[proxy]>=1.50.0,<2.0.0",
    "typer>=0.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "arize-phoenix>=4.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pytest-asyncio>=0.23.0",
    "aiohttp>=3.9.0",
    "prometheus-client>=0.19.0",
]

[project.scripts]
llm-eval = "cli:app"

[tool.setuptools]
py-modules = ["cli", "eval_logger"]
